# Wike

./: com.github.hugolabe.Wike.json
data/: com.github.hugolabe.Wike.gresource.xml
data/gtk/: archive-row.ui  help-overlay.ui  manage-archives-dialog.ui  menu-main.ui  prefs.ui
src/: application.py  data.py  manage_archives_dialog.py  meson.build  page.py  prefs.py  search.py  view.py  wike-sp.in  wiki.py  wikipedia.py  window.py  zim.py
